dataprep-webapp/src/app/components/inventory/item/_inventory-item.scss
/*  ============================================================================

  Copyright (C) 2006-2016 Talend Inc. - www.talend.com

  This source code is available under agreement available at
  https://github.com/Talend/data-prep/blob/master/LICENSE

  You should have received a copy of the agreement
  along with this program; if not, write to Talend SA
  9 rue Pages 92150 Suresnes, France

  ============================================================================*/

.inventory-list {
  @include flex-column();
  overflow: auto;
}

.inventory-item {
  @include flex-grow(0);
  @include flex-shrink(0);

  @include flex-row();
  border-bottom: 1px solid #CECECE;
  height: 80px;
  padding: 10px;

  .inventory-actions {
    display: none;
  }

  .inventory-action-favorite{
    @include flex-grow(0);
    @include flex-shrink(0);

    @include display(flex);
    @include align-items(center);
    @include justify-content(flex-end);

    .btn-icon {
      @include flex-row();
      @include align-items(center);

      opacity: 1;

      height: 45px;
      border-radius: 5px;
      padding: 0 10px;
      margin: 0 5px;

      color: $white;
      font-family: $iconsfont;
      font-size: 1.1em;

      &:hover {
        background-color: $background-blue;
      }
    }

    .favorite-true {
      color: $orange;
    }
  }

  .inventory-text {
    @include flex-grow(1);
  }

  &:hover {
    background-color: tint($pale-blue, 30%);

    .btn-transparent {
      opacity: 1;
    }

    .inventory-text {
      .inventory-title {
        @include ellipsis(300px);
      }
      .edit-btn {
        display: block;
      }
    }

    .inventory-actions {
      @include flex-grow(1);
      @include flex-shrink(0);

      @include display(flex);
      @include align-items(center);
      @include justify-content(flex-end);

      .divider {
        background: $white;
        height: 45px;
        width: 1px;
        margin: 0 5px;
      }

      .btn-icon {
        @include flex-row();
        @include align-items(center);

        height: 45px;
        border-radius: 5px;
        padding: 0 10px;
        margin: 0 5px;

        color: $white;
        font-family: $iconsfont;
        font-size: 1.1em;

        &:hover {
          background-color: $background-blue;
        }
      }

      .inventory-actions-related-item {
        padding-right: 0;
        height: 45px;

        .line-separator {
          display: none;
        }

        .button-dropdown,
        .button-dropdown button.button-dropdown-main,
        .button-dropdown button.button-dropdown-side {
          border: none;
          background: transparent;
          padding: 0;

          .button-dropdown-side {
            width: 20px;
          }

          .button-dropdown-main-icon {
            @include flex-row-center();
            @include filter(none);
            font-size: 1em;
            padding: 0;
          }

          .dropdown-menu {
            width: auto;

            &:before {
              top: -1.2em;
            }

            ul.inventory-actions-related-item-menu {
              font-family: $sourcesanspro;
              color: $black;

              > li {
                border: none;
                font-size: 0.8em;

                &:not(:first-child) {
                  padding-left: 15px;
                }

                &.divider {
                  border-bottom: 1px solid #e5e5e5;
                  padding: 0;
                  margin: 0;
                }

                .inventory-actions-related-item-name {
                  font-size: 1.15em;
                  font-weight: bold;
                  text-transform: uppercase;
                  @include ellipsis(350px);
                  vertical-align: bottom;
                }
              }
            }
          }
        }
      }
    }
  }

  .inventory-icon {
    @include display(flex);
    @include align-items(center);

    padding: 0 3px;
    position: relative;

    img {
      width: 40px;
    }

    .pin {
      position: absolute;
      left: 0;
      top: -5px;
      width: 25px;
    }

    .preparation-icon-div {
      font-size: 1.3em;
      color: darken($pale-blue, 15%);
    }

    .documentation-icon-div {
      font-size: 1.3em;
      color: $dark-blue;
    }
  }

  .inventory-text {
    @include flex-column();
    @include justify-content(center);
    padding-left: 10px;

    .inventory-title {
      @include ellipsis(750px);
      padding: 3px 0;
      cursor: pointer;

      color: $black;
      font-weight: 700;
      text-transform: uppercase;
    }

    .inventory-description {
      color: $medium-gray;
      font-weight: 300;
      font-size: .8em;

      overflow: hidden;
      white-space: normal;
      max-height: 2.8em;
    }

    .edition-text-input {
      padding: 4px;
      width: 220px;
    }

    .edit-btn {
      display: none;
    }
  }
}

